<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground_Splash"
    >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"

        >

        <ImageView
            android:id="@+id/det_image"
            android:layout_width="240dp"
            android:layout_height="180dp"
            android:layout_gravity="center_horizontal"
            android:padding="8dp"
            android:src="@drawable/cassette" />


        <TextView
            android:id="@+id/det_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:textSize="24sp"
            android:paddingBottom="12dp"
            android:text="@string/Alb_DaftPunk1_Name"
            />


        <TextView
            android:id="@+id/det_year"
            style="@style/Text_Centrado"
            android:text="@string/Alb_DaftPunk1_Year"
            />

        <TextView
            android:id="@+id/det_Descriotion"
            style="@style/Text_Centrado"
            android:text="@string/Alb_DaftPunk1_Desc"
            />

        <TextView
            android:id="@+id/det_Info"
            style="@style/Text_Info"
            android:text="@string/Info_Description"
            />

        <LinearLayout
            android:id="@+id/linear_ActionIcons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@color/colorAzulIndigo"
            >


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center"
                android:layout_weight="1">

                <TextView
                    style="@style/TextS_Big"
                    android:text="@string/UI_Buy"/>
                <ImageView
                    android:id="@+id/ic_maps"
                    style="@style/Icon_detail"
                    android:src="@drawable/tickets"/>

            </LinearLayout>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_horizontal"
                android:layout_weight="1">

                <TextView
                    style="@style/TextS_Big"
                    android:text="@string/UI_Share"/>
                <ImageView
                    android:id="@+id/ic_share"
                    style="@style/Icon_detail"
                    android:src="@drawable/share"/>

            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

</ScrollView>