<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.bjlanza.udacity.musicapp.MainActivity"
    android:background="@color/colorAzulIndigo"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >



        <TextView
            style="@style/Text_Info"
            android:id="@+id/textV_InfoPlayer"
            android:text="@string/Info_Player"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_margin="8dp"
            android:background="@color/colorAccent"/>
        <ImageView
            android:padding="12dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/intro"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_margin="8dp"
            android:background="@color/colorAccent"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center"
                android:layout_weight="1">

                <TextView
                    style="@style/TextS_Big"
                    android:text="@string/UI_Rewind"/>
                <ImageView
                    style="@style/Icon_detail"
                    android:src="@drawable/rewind"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center"
                android:layout_weight="1">

                <TextView
                    style="@style/TextS_Big"
                    android:text="@string/UI_Play"/>
                <ImageView
                    style="@style/Icon_detail"
                    android:src="@drawable/play_button"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center"
                android:layout_weight="1">

                <TextView
                    style="@style/TextS_Big"
                    android:text="@string/UI_Forwardr"/>
                <ImageView
                    style="@style/Icon_detail"
                    android:src="@drawable/fast_forward"/>

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_margin="8dp"
            android:background="@color/colorAccent"/>
    </LinearLayout>
</ScrollView>